<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.davethecamper.cashshop</groupId>
	<artifactId>cash-shop</artifactId>
	<version>${minecraftVersion}.27</version>
	<packaging>jar</packaging>

	<name>cash-shop</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<minecraftVersion>1.21</minecraftVersion>
		<outputDiretory>${env.ATS_OUTPUT}</outputDiretory>
	</properties>

	<repositories>
		<!-- This adds the Spigot Maven repository to the build -->
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>

		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<!--This adds the Spigot API artifact to the build -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.21.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20240205</version>
		</dependency>

		<dependency>
			<groupId>com.github.cryptomorin</groupId>
			<artifactId>XSeries</artifactId>
			<version>13.3.3</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.34</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>


	<build>
		<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>*</include>
					<include>**/*</include>
				</includes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>

				<configuration>
					<createDependencyReducedPom>false</createDependencyReducedPom>
					<relocations>

						<realocation>
							<pattern>com.paypal.sdk</pattern>
							<shadedPattern>me.davethecamper.cashshop.libs.paypal</shadedPattern>
						</realocation>

						<realocation>
							<pattern>org.json</pattern>
							<shadedPattern>me.davethecamper.cashshop.libs.json</shadedPattern>
						</realocation>

						<relocation>
							<pattern>com.cryptomorin.xseries</pattern>
							<shadedPattern>me.davethecamper.cashshop.libs.xseries</shadedPattern>
						</relocation>

					</relocations>

					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>com/cryptomorin/xseries/NMSExtras*</exclude>
								<exclude>com/cryptomorin/xseries/NoteBlockMusic*</exclude>
								<exclude>com/cryptomorin/xseries/ReflectionUtils*</exclude>
								<exclude>com/cryptomorin/xseries/SkullCacheListener*</exclude>
								<exclude>com/cryptomorin/xseries/SkullUtils*</exclude>
								<exclude>com/cryptomorin/xseries/XBiome*</exclude>
								<exclude>com/cryptomorin/xseries/XBlock*</exclude>
								<exclude>com/cryptomorin/xseries/XEntity*</exclude>
								<exclude>com/cryptomorin/xseries/XPotion*</exclude>
							</excludes>
						</filter>
					</filters>
				</configuration>

				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<outputDirectory>${outputDiretory}</outputDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/DaveTheCamper/CashShop</url>
		</repository>
	</distributionManagement>

</project>
